<resources>
    <string name="app_name">Emp Evaluation Admin</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="admin">Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="share_app">Share App</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="required_field">Required field</string>
    <string name="sign_up_success_message">Signup successful</string>
    <string name="share_app_message">Long Queue is frustrating, Let me recommend you the solution to it. Install this app and blow away the frustration:\n</string>
    <string name="error_password">Minimum 6 characters required</string>
    <string name="error_email">Email is invalid</string>
    <string name="error_phone">Phone is invalid</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="add_employee">Add Employee</string>
    <string name="create_task">Create Task</string>
    <string name="assign_task">Assign Task</string>
    <string name="employee_list">Employee List</string>
    <string name="full_name">Full Name</string>
    <string name="add_success">Added Successfully</string>
    <string name="title">Title</string>
    <string name="none">None</string>
    <string name="project_name">Project Name</string>
    <string name="create_success">Created Successfully</string>
    <string name="rate_us">Rate us</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="task_list">Task List</string>
    <string name="task_description">Task Description</string>
    <string name="no_data_found">No data found</string>
    <string name="task_title">Task Title</string>
    <string name="select_employee">Select Employee</string>
    <string name="select_task">Select Task</string>
    <string name="task_assigned">Task Assigned successfully</string>
    <string name="operation_success">Operation Success</string>
    <string name="assigned_to">Assigned To</string>
    <string name="rate_tasks">Rate Tasks</string>
    <string-array name="task_tabs">
        <item>Open</item>
        <item>Working</item>
        <item>Completed</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_was_on_time">Task was on time?</string>
    <string name="rate_the_quality_of_work">Rate the quality of work?</string>
    <string name="submit">Submit</string>
</resources>