<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.createTaskFragment.CreateTaskFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalInfoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/taskTitleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/title"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10dp"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/projectNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/project_name"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@+id/taskTitleEt" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/taskDescriptionEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/shape_edit_text"
                android:gravity="center"
                android:hint="@string/task_description"
                android:inputType="textEmailAddress"
                android:lines="4"
                android:maxLines="4"
                android:paddingHorizontal="@dimen/_10dp"
                app:layout_constraintTop_toBottomOf="@+id/projectNameEt" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15dp"
        android:background="@drawable/shape_button"
        android:text="@string/create_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/personalInfoCard" />
</androidx.constraintlayout.widget.ConstraintLayout>