<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.assignTaskFragment.AssignTaskFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/personalInfoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/employeeSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edit_text"
                android:padding="@dimen/_5dp"
                app:hintText="@string/select_employee"
                app:layout_constraintTop_toTopOf="parent" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/taskSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_edit_text"
                android:padding="@dimen/_5dp"
                app:hintText="@string/select_task"
                app:layout_constraintTop_toBottomOf="@+id/employeeSpinner"
                tools:layout_editor_absoluteX="0dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/assignTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15dp"
        android:background="@drawable/shape_button"
        android:text="@string/assign_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/personalInfoCard" />

</androidx.constraintlayout.widget.ConstraintLayout>